--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,38 +1,29 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - IoT Apps</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
- @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("IoT Apps MVC Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Indicadores", "Indicadores", "Home")</li>
-                    <li>@Html.ActionLink("Canales", "Index", "Channel")</li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        @Html.ActionLink("IoT Apps MVC Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <div class="navbar-header">
+            @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">*@
+            <span class="icon-bar">@Html.ActionLink("Inicio", "Index", "Home")</span> /
+            <span class="icon-bar">@Html.ActionLink("Acerca de", "About", "Home")</span> /
+            <span class="icon-bar">@Html.ActionLink("Contacto", "Contact", "Home")</span> /
+            <span class="icon-bar">@Html.ActionLink("Indicadores", "Indicadores", "Home")</span> /
+            <span class="icon-bar">@Html.ActionLink("Canales", "Index", "Channel")</span> /
+            @*</button>*@
         </div>
-    </div>
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -41,7 +32,6 @@
         </footer>
     </div>
 
-   
     @RenderSection("scripts", required: false)
 </body>
 </html>
